[package]
name = "penumbra-sdk-proof-aggregation-reference"
authors = { workspace = true }
repository = { workspace = true }
description = "Independent test oracle boundary for Penumbra proof aggregation"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
ark-ec = { workspace = true, default-features = false }
ark-ff = { workspace = true, default-features = false }
ark-groth16 = { workspace = true, default-features = false }
ark-poly = { workspace = true, default-features = false }
ark-serialize = { workspace = true }
ark-std = { workspace = true, default-features = false }
blake2 = "0.9"
decaf377 = { workspace = true, default-features = false }
digest = "0.9"
penumbra-sdk-proof-aggregation = { workspace = true, default-features = false }
penumbra-sdk-proof-aggregation-trace-schema = { workspace = true }
penumbra-sdk-proof-params = { workspace = true, default-features = false }
penumbra-sdk-shielded-pool = { workspace = true, default-features = false }
rand_chacha = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-snark = { workspace = true }
