[package]
name = "penumbra-orbis-client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
decaf377 = { workspace = true, default-features = true }
hex = { workspace = true }
poseidon377 = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

aes-gcm = "0.10"
hkdf = "0.12"

penumbra-sdk-compliance = { workspace = true, default-features = false }

orbis-authn = { package = "authn", git = "https://github.com/sourcenetwork/orbis-rs", rev = "d5889bd777bbac7bf97a8e89a2556116f2740ceb" }
orbis-common = { package = "common", git = "https://github.com/sourcenetwork/orbis-rs", rev = "d5889bd777bbac7bf97a8e89a2556116f2740ceb" }
orbis-proto = { package = "proto", git = "https://github.com/sourcenetwork/orbis-rs", rev = "d5889bd777bbac7bf97a8e89a2556116f2740ceb" }
orbis-tonic = { package = "tonic", version = "0.14.5", features = ["transport"] }

[dev-dependencies]
serde_json = { workspace = true }
