[package]
name = "penumbra-sdk-compliance-bench"
authors = { workspace = true }
repository = { workspace = true }
description = "POC compliance and correlation benchmarks for Penumbra"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[[bench]]
name = "client_crypto"
path = "benches/client/crypto.rs"
harness = false

[[bench]]
name = "client_flow"
path = "benches/client/flow.rs"
harness = false

[[bench]]
name = "validator_flow"
path = "benches/validator/flow.rs"
harness = false

[[bench]]
name = "local_fullnode_flow"
path = "benches/local_fullnode/flow.rs"
harness = false

[[bench]]
name = "scanner_decryption"
path = "benches/scanner/decryption.rs"
harness = false

[[bench]]
name = "scanner_trees"
path = "benches/scanner/trees.rs"
harness = false

[[bench]]
name = "scanner_flow"
path = "benches/scanner/flow.rs"
harness = false

[dependencies]
anyhow = { workspace = true }
bech32 = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cnidarium = { workspace = true, features = ["migration"], default-features = true }
csv = "1"
decaf377 = { workspace = true, features = ["r1cs"], default-features = true }
decaf377-rdsa = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pcli = { path = "../../../crates/bin/pcli", default-features = true }
penumbra-sdk-app = { workspace = true, default-features = true }
penumbra-sdk-asset = { workspace = true, default-features = true }
penumbra-sdk-bench-support = { path = "../../../crates/bench-support" }
penumbra-sdk-compliance = { workspace = true, default-features = true, features = ["test-helpers"] }
penumbra-sdk-custody = { workspace = true, default-features = true }
penumbra-sdk-dex = { workspace = true, default-features = true }
penumbra-sdk-fee = { workspace = true, default-features = true }
penumbra-sdk-governance = { workspace = true, default-features = true }
penumbra-sdk-keys = { workspace = true, default-features = true }
penumbra-sdk-mock-client = { workspace = true }
penumbra-sdk-mock-consensus = { workspace = true }
penumbra-sdk-poc-stage-bench = { package = "penumbra-sdk-bench", path = "../stage-bench" }
penumbra-sdk-proof-aggregation = { workspace = true }
penumbra-sdk-proof-params = { workspace = true, default-features = true, features = ["bundled-proving-keys", "download-proving-keys"] }
penumbra-sdk-proto = { workspace = true, default-features = true, features = ["rpc"] }
penumbra-sdk-sct = { workspace = true, default-features = true }
penumbra-sdk-shielded-pool = { workspace = true, default-features = true, features = ["benchmark-helpers"] }
penumbra-sdk-stake = { workspace = true, default-features = true }
penumbra-sdk-tct = { workspace = true, features = ["r1cs"], default-features = true }
penumbra-sdk-view = { workspace = true, default-features = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
tonic = { workspace = true, features = ["transport"] }
tracing = { workspace = true }
