[package]
name = "penumbra-sdk-bench"
authors = {workspace = true}
repository = {workspace = true}
description = "POC stage-study labs for Penumbra"
version = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
publish = false

[build-dependencies]
regex = { version = "1", optional = true }
reqwest = { version = "0.12.9", optional = true, features = [
    "blocking",
    "json",
] }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10.6", optional = true }
hex = { version = "0.4.3", optional = true }
anyhow = "1"

[features]
download-proving-keys = ["regex", "reqwest", "serde_json", "sha2", "hex"]
parallel = [
    "ark-ff/parallel",
    "decaf377/parallel",
    "ark-groth16/parallel",
    "ark-std/parallel",
    "ark-r1cs-std/parallel",
]
bench-mimalloc = ["dep:mimalloc"]

[dependencies]
anyhow = {workspace = true}
camino = {workspace = true}
clap = {workspace = true, features = ["derive"]}
ark-bls12-377 = { workspace = true }
ark-bw6-761 = { workspace = true }
ark-ec = {workspace = true}
ark-ff = {workspace = true, default-features = false}
ark-groth16 = {workspace = true, default-features = false}
ark-r1cs-std = {workspace = true, default-features = false}
ark-relations = {workspace = true}
ark-serialize = {workspace = true}
ark-snark = {workspace = true}
ark-std = {workspace = true, default-features = false}
bech32 = {workspace = true}
cnidarium = {workspace = true, features = ["migration"], default-features = true}
csv = "1"
penumbra-sdk-bench-support = { path = "../../../crates/bench-support" }
decaf377 = {workspace = true, features = ["r1cs"], default-features = true}
decaf377-rdsa = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
num-bigint = {workspace = true}
once_cell = {workspace = true}
parking_lot = {workspace = true}
pcli = {path = "../../../crates/bin/pcli", default-features = true}
penumbra-sdk-poc-preconsensus = { path = "../preconsensus" }
penumbra-sdk-app = {workspace = true, default-features = true}
penumbra-sdk-asset = {workspace = true, default-features = true}
penumbra-sdk-compliance = {workspace = true, default-features = true, features = ["test-helpers"]}
penumbra-sdk-custody = {workspace = true, default-features = true}
penumbra-sdk-fee = {workspace = true, default-features = true}
penumbra-sdk-keys = {workspace = true, default-features = true}
penumbra-sdk-mock-client = {workspace = true}
penumbra-sdk-mock-consensus = {workspace = true}
penumbra-sdk-proto = {workspace = true, default-features = true, features = ["rpc"]}
penumbra-sdk-proof-params = { workspace = true, default-features = true, features = ["bundled-proving-keys", "download-proving-keys"] }
penumbra-sdk-proof-aggregation = {workspace = true}
penumbra-sdk-shielded-pool = {workspace = true, default-features = true, features = ["benchmark-helpers"]}
penumbra-sdk-sct = {workspace = true, default-features = true}
penumbra-sdk-tct = {workspace = true, features = ["r1cs"], default-features = true}
penumbra-sdk-transaction = {workspace = true, default-features = true}
penumbra-sdk-num = {workspace = true, default-features = true}
penumbra-sdk-view = {workspace = true, default-features = true}
rand = {workspace = true}
rand_core = {workspace = true, features = ["getrandom"]}
reqwest = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serde_yaml = "0.9"
sha2 = {workspace = true}
tendermint = {workspace = true}
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"]}
tonic = {workspace = true, features = ["transport"]}
tracing = {workspace = true}
async-channel = "2"
zstd = "0.13"
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = {workspace = true}
criterion = {workspace = true, features = ["html_reports"]}
decaf377-fmd = {workspace = true}
decaf377-ka = {workspace = true}
decaf377-rdsa = {workspace = true}
penumbra-sdk-dex = {workspace = true, default-features = true}
penumbra-sdk-governance = {workspace = true, default-features = true}
rand_chacha = {workspace = true}
penumbra-sdk-stake = {workspace = true, default-features = true}
tempfile = {workspace = true}
