[package]
name = "penumbra-sdk-compliance"
authors = {workspace = true}
repository = {workspace = true}
description = "Compliance component implementation for Penumbra"
version = {workspace = true}
license = {workspace = true}
edition = {workspace = true}

[features]
component = [
    "cnidarium",
    "cnidarium-component",
    "ibc-proto",
    "penumbra-sdk-proto/cnidarium",
    "penumbra-sdk-proto/rpc",
    "penumbra-sdk-sct/component",
    "rusqlite",
    "tokio",
    "tonic",
]
default = ["component"]
sqlite-bundled = ["rusqlite/bundled"]
test-helpers = ["decaf377-fmd", "decaf377-ka"]

[dependencies]
aes-gcm = "0.10"
anyhow = {workspace = true}
ark-ff = {workspace = true}
base64 = {workspace = true}
ark-groth16 = {workspace = true}
ark-r1cs-std = {workspace = true}
ark-relations = {workspace = true}
ark-serialize = {workspace = true}
ark-snark = {workspace = true}
async-trait = {workspace = true}
bincode = {workspace = true}
cnidarium = {workspace = true, optional = true, default-features = true}
cnidarium-component = {workspace = true, optional = true, default-features = true}
decaf377 = {workspace = true, default-features = true, features = ["r1cs"]}
decaf377-rdsa = {workspace = true}
decaf377-fmd = {workspace = true, optional = true}
decaf377-ka = {workspace = true, optional = true}
once_cell = {workspace = true}
penumbra-sdk-asset = {workspace = true, default-features = false}
penumbra-sdk-keys = {workspace = true, default-features = false}
penumbra-sdk-num = {workspace = true, default-features = false}
penumbra-sdk-proto = {workspace = true, default-features = false}
penumbra-sdk-sct = {workspace = true, default-features = false}
penumbra-sdk-tct = {workspace = true, default-features = false}
penumbra-sdk-txhash = {workspace = true, default-features = false}
poseidon377 = {workspace = true, features = ["r1cs"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
sha2 = {workspace = true}
blake2b_simd = {workspace = true}
chacha20poly1305 = {workspace = true}
hex = {workspace = true}
hkdf = "0.12"
ibc-proto = {workspace = true, optional = true, default-features = false}
futures = {workspace = true}
rand_core = {workspace = true}
rusqlite = {version = "0.32", optional = true}
tendermint = {workspace = true}
tokio = {workspace = true, optional = true}
tonic = {workspace = true, optional = true}
tracing = {workspace = true}

[dev-dependencies]
decaf377-fmd = {workspace = true}
decaf377-ka = {workspace = true}
penumbra-sdk-keys = {workspace = true, features = ["demo"]}
rand = {workspace = true}
serde_json = {workspace = true}
tempfile = {workspace = true}
tokio = {workspace = true, features = ["full"]}
