[package]
name = "ark-dh-commitments"
version = "0.4.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Psi Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-dh-commitments/"

[dependencies]
ark-ff = "0.5"
ark-ec = "0.5"
ark-serialize = { version = "0.5", features = [ "derive" ] }
ark-std = "0.5"

ark-inner-products = { path = "../inner_products" }

[dev-dependencies]
ark-bls12-381 = { version = "0.5", features = [ "curve" ] }
ark-ed-on-bls12-381 = "0.5"

[features]
default = [ "parallel" ]
parallel = [ "ark-ff/parallel", "ark-ec/parallel" ]
